--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("com.google.dagger.hilt.android")
+
+
 }
+apply plugin: 'kotlin-kapt'
 
 android {
     namespace 'com.example.tmdb_compose'
@@ -60,4 +64,17 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    //Hilt dependency
+    //https://developer.android.com/training/dependency-injection/hilt-android
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+
+    //fix duplicated class
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+
+}
+// Allow references to generated code
+kapt {
+    correctErrorTypes = true
 }
