--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id("com.google.dagger.hilt.android")
 
+    id 'kotlin-kapt'
 
 }
-apply plugin: 'kotlin-kapt'
+
 
 android {
     namespace 'com.example.tmdb_compose'
@@ -63,6 +64,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -74,6 +76,8 @@ dependencies {
     //https://developer.android.com/training/dependency-injection/hilt-android
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
+
 
     //To fix duplicated class
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
