--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         buildConfigField "String", "API_KEY", '"e4a9d54204f8ee1d8121e867e9a8a5a5"'
         // compi
         buildConfigField "String", "BASE_URL", '"https://api.themoviedb.org/3/"'
+        buildConfigField "String", "POSTER_URL", '"https://image.tmdb.org/t/p/w500"'
 
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -93,6 +94,9 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
 
     implementation "com.squareup.moshi:moshi:1.8.0"
+
+    //Glide implementation for compose
+    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
 
 
 }
