- Get popular movie list from API and display it

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
     //Glide implementation for compose
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
 
+    //LiveDatas for compose
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
+
 
 }
 // Allow references to generated code
